actually fix overflow with body css

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body{
+  max-width: 100vw;
+  overflow: hidden;
+}
+
 #root::-webkit-scrollbar {
     width: 0.4rem;
 }
@@ -16,6 +21,7 @@
 
 .swipe {
     position: absolute;
+    overflow: hidden;
 }
 
 .swipeCardContainer {
@@ -23,6 +29,7 @@
     max-width: 280px;
     height: 400px;
     margin: auto;
+    overflow: hidden;
 }
 
 .swipeCard {
@@ -40,6 +47,8 @@
 .swipeContent {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+
 }
 
 .swipe:last-of-type {
@@ -112,3 +121,12 @@
       opacity: 0.5;
       overflow: hidden;
   }
+  div#swipeCardStack[lowSOL="false"] {
+    overflow: hidden;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
